[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://1.Codebase/src/scripts/ui/asset_card.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.12, 0.16, 0.22, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.6, 0.8, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 4
shadow_color = Color(0, 0, 0, 0.3)

[node name="AssetCard" type="Control"]
custom_minimum_size = Vector2(300, 140)
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("1")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="IconPanel" type="PanelContainer" parent="Panel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_vertical = 0

[node name="Icon" type="TextureRect" parent="Panel/MarginContainer/HBoxContainer/IconPanel"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="Details" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6

[node name="NameLabel" type="Label" parent="Panel/MarginContainer/HBoxContainer/Details"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.95, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Asset Name"
autowrap_mode = 3

[node name="TagsContainer" type="HBoxContainer" parent="Panel/MarginContainer/HBoxContainer/Details"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="TagsLabel" type="Label" parent="Panel/MarginContainer/HBoxContainer/Details/TagsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.8, 0.9, 1)
theme_override_font_sizes/font_size = 12
text = "Tags:"

[node name="TagsList" type="Label" parent="Panel/MarginContainer/HBoxContainer/Details/TagsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.5, 0.7, 1, 1)
theme_override_font_sizes/font_size = 12
text = "Interactable, Quest"
autowrap_mode = 3

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/HBoxContainer/Details"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="SummaryLabel" type="Label" parent="Panel/MarginContainer/HBoxContainer/Details"]
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.8, 0.85, 0.9, 1)
theme_override_font_sizes/font_size = 13
text = "Short description of the asset that provides context."
autowrap = true
autowrap_mode = 3
clip_text = false
max_lines_visible = -1

[node name="HoverEffect" type="ColorRect" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.4, 0.6, 1, 0.1)
